<resources>
    <string name="app_name">S-Chat</string>
    <string name="txt_one">Welcome to S-Chat !!!</string>
    <string name="txt_two">Connecting with friends</string>
    <string name="txt_three">Maximum convenience</string>
    <string name="txt_four">Guaranteed confidentiality</string>
    <string name="welcome_txt">~Welcome to S-Chat~</string>
    <string name="skip_btn_txt">Skip >></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats_tab">Chats</string>
    <string name="status_tab">Status</string>
    <string name="contacts_tab">Contacts</string>
    <string name="info_name">Name Surname</string>
    <string name="info_prof_txt">Programmer</string>
    <string name="info_country_txt">Vanadzor</string>
    <string name="info_gender_txt">Male</string>
    <string name="info_birthday_txt">dd/mm/yyyy</string>
    <string name="hint_txt">Enter message...</string>
    <string name="receive_message">Zbaxvac em kgrem</string>
    <string name="time_txt">12:00</string>
    <string name="send_txt">A barev</string>
    <string name="number_txt">number</string>
    <string name="mail_txt">email</string>
    <string name="item_status_txt">status</string>
</resources>
