<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChatActivity">

    <android.support.design.widget.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        app:tabIndicatorColor="@color/tab_icon_color"
        app:tabSelectedTextColor="@color/tab_icon_color"
        app:tabTextColor="@color/tab_txt_color">

        <android.support.design.widget.TabItem
            android:id="@+id/tabChats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chats_tab" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_tab" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabCalls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_tab" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>