<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InfoFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/info_img"
        android:layout_width="@dimen/info_img_size"
        android:layout_height="@dimen/info_img_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/info_img_margin"
        android:src="@drawable/placeholder"
        app:civ_border_color="@color/background_color_dark"
        app:civ_border_width="@dimen/info_img_border" />

    <TextView
        android:id="@+id/info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_img"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/info_img_margin"
        android:text="@string/info_name"
        android:textSize="@dimen/info_name_size" />

    <LinearLayout
        android:id="@+id/prof_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_name"
        android:layout_marginTop="@dimen/info_icons_margin"
        android:orientation="horizontal"
        android:padding="@dimen/info_icon_padding">

        <ImageView
            android:id="@+id/prof_icon"
            android:layout_width="@dimen/info_icon_size"
            android:layout_height="@dimen/info_icon_size"
            android:layout_marginLeft="@dimen/info_icon_margin"
            android:layout_marginStart="@dimen/info_icon_margin"
            android:src="@drawable/prof" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/info_margin"
            android:layout_marginStart="@dimen/info_margin"
            android:text="@string/info_prof_txt"
            android:textSize="@dimen/info_txt_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/country_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prof_layout"
        android:orientation="horizontal"
        android:padding="@dimen/info_icon_padding">

        <ImageView
            android:id="@+id/country_icon"
            android:layout_width="@dimen/info_icon_size"
            android:layout_height="@dimen/info_icon_size"
            android:layout_marginLeft="@dimen/info_icon_margin"
            android:layout_marginStart="@dimen/info_icon_margin"
            android:src="@drawable/country" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/info_margin"
            android:layout_marginStart="@dimen/info_margin"
            android:text="@string/info_country_txt"
            android:textSize="@dimen/info_txt_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country_layout"
        android:orientation="horizontal"
        android:padding="@dimen/info_icon_padding">

        <ImageView
            android:id="@+id/gender_icon"
            android:layout_width="@dimen/info_icon_size"
            android:layout_height="@dimen/info_icon_size"
            android:layout_marginLeft="@dimen/info_icon_margin"
            android:layout_marginStart="@dimen/info_icon_margin"
            android:src="@drawable/gender" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/info_margin"
            android:layout_marginStart="@dimen/info_margin"
            android:text="@string/info_gender_txt"
            android:textSize="@dimen/info_txt_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender_layout"
        android:orientation="horizontal"
        android:padding="@dimen/info_icon_padding">

        <ImageView
            android:id="@+id/born_icon"
            android:layout_width="@dimen/info_icon_size"
            android:layout_height="@dimen/info_icon_size"
            android:layout_marginLeft="@dimen/info_icon_margin"
            android:layout_marginStart="@dimen/info_icon_margin"
            android:src="@drawable/born" />

        <TextView
            android:id="@+id/birthDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/info_margin"
            android:layout_marginStart="@dimen/info_margin"
            android:text="@string/info_birthday_txt"
            android:textSize="@dimen/info_txt_size" />

    </LinearLayout>


</RelativeLayout>