<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height"
    android:layout_margin="@dimen/item_margin">

    <RelativeLayout
        android:id="@+id/users_call_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/users_call_img"
            android:layout_width="@dimen/item_img_size"
            android:layout_height="@dimen/item_img_size"
            android:layout_margin="@dimen/item_img_margin"
            android:src="@drawable/placeholder"
            app:civ_border_color="@color/mail_color"
            app:civ_border_width="@dimen/border_size" />

        <TextView
            android:id="@+id/users_call_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/users_call_img"
            android:layout_toRightOf="@+id/users_call_img"
            android:fontFamily="monospace"
            android:text="@string/info_name"
            android:textSize="@dimen/item_name_size"
            android:textStyle="bold"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/users_call_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/number_margin"
            android:layout_toEndOf="@+id/users_call_img"
            android:layout_toRightOf="@+id/users_call_img"
            android:text="@string/number_txt"
            android:textColor="@color/number_color"
            android:textSize="@dimen/number_size" />

        <TextView
            android:id="@+id/users_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mail_margin"
            android:layout_toEndOf="@+id/users_call_img"
            android:layout_toRightOf="@+id/users_call_img"
            android:text="@string/mail_txt"
            android:textColor="@color/mail_color"
            android:textSize="@dimen/number_size" />

        <ImageButton
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/call_btn_margin"
            android:layout_marginRight="@dimen/call_btn_margin"
            android:background="@color/white"
            android:src="@drawable/ic_call_black_24dp" />

        <ImageButton
            android:id="@+id/email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/call_button"
            android:layout_alignStart="@+id/call_button"
            android:layout_below="@+id/users_call_number"
            android:background="@color/white"
            android:src="@drawable/ic_mail_outline_black_24dp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>